refactor(user): remove leetcode user link, replace username to leetcodeUsername